--- a/project/build.properties
+++ b/project/build.properties
@@ -2,7 +2,7 @@
 #Mon Sep 20 21:52:39 CDT 2010
 project.organization=com.philipcali
 project.name=scala-cct
-sbt.version=0.7.4
+sbt.version=0.7.5
 project.version=1.0
-build.scala.versions=2.8.0
+build.scala.versions=2.8.1 2.8.0
 project.initialize=false
